# OGLRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  install_requirements.sh
Renderer/: Entity.cpp  Entity.h  Transform.cpp  Transform.h  main.cpp
Renderer/Animation/: Animation.cpp  Animation.h
Renderer/Core/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.h  Window.cpp  Window.h
Resources/Shaders/: base_frag.glsl  base_vert.glsl
fabamaq/: Transform.cpp  Transform.h
fabamaq/Core/: Texture.cpp  Texture.h  Window.h
